--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -6,14 +6,7 @@
     --background-color: #ffffff;
     --blue: #007bff;
 
-    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-        "Segoe UI Symbol", "Noto Color Emoji";
-
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-        "Courier New", monospace;
-
-    font-family: var(--font-family-sans-serif);
+    font-family: "Lato", "Helvetica Neue", Arial, sans-serif;
     color: var(--text-color);
 
     overflow: hidden;
